update config file

--- a/config.json
+++ b/config.json
@@ -1,18 +1,22 @@
 {
+  "cuda": -1,
   "dataname": "minst",
   "epochs": 30,
   "noise_dim": 100,
   "num_examples_to_generate": 16,
-  "batch_size": 512,
+  "batch_size": 256,
   "buffer_size": 600000,
+  "model_dir": "checkpoints",
+  "predict_dir": "generated_images",
+  "stats_dir": "stats",
   "generator": {
     "input_size": 100,
-    "adam_lr": 2e-4,
+    "adam_lr": 1e-4,
     "adam_beta1": 0.5,
     "activation_alpha": 0.2,
     "layers": 2,
     "filters": 256,
-    "filter_size": 3,
+    "filter_size": 5,
     "stride": 2,
     "image_len": 7,
     "colour_channel": 1,
@@ -21,14 +25,14 @@
   },
   "discriminator": {
     "input_size": 100,
-    "adam_lr": 2e-4,
+    "adam_lr": 1e-4,
     "adam_beta1": 0.5,
     "activation_alpha": 0.2,
     "layers": 2,
     "filters": 64,
-    "filter_size": 3,
+    "filter_size": 5,
     "stride": 2,
-    "dropout": 0.2,
+    "dropout": 0.3,
     "image_len": 28,
     "colour_channel": 1,
     "initial_std": 0.02,
